# Procesador-de-TXT-a-Excel-con-FastAPI-MVC-

./: .gitignore  pyproject.toml
app/: main.py
app/controller/: file_controller.py
app/model/: file_model.py
app/services/: file_service.py
app/utils/: excel_writer.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
output/: Nro..xlsx
uploads/: Nro..txt
