[tool.poetry]
name = "procesador-de-txt-a-excel"
version = "0.1.0"
description = "Procesador automático de archivos TXT y Excel con FastAPI"
authors = ["Sebas Vasquez <gatorebeldes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.34.2"
pandas = "*"
openpyxl = "*"
sqlalchemy = "*"
python-multipart = "*"
python-dotenv = "^1.1.0"

[tool.poetry.dev-dependencies]
watchfiles = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
